--- a/index.html
+++ b/index.html
@@ -28,17 +28,13 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photo.jpg" alt="alt text" width="160px" height="160px" />&nbsp;</td>
-<td align="left"><p>PhD student<br /> <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, <br /><a href="https://www.virginia.edu">University of Virginia (UVA)</a><br />
+<td align="left"><p>Postdoc associate<br /> <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, <br /><a href="https://www.virginia.edu">University of Virginia (UVA)</a><br />
 Rice Hall 220 <br />
-Charlottesville, VA, USA <br /> 
-<<<<<<< Updated upstream
+New Haven, CT, USA <br /> 
 Email: <i>h.wang</i> [@] cs [DOT] yale [DOT]edu</p>
-=======
-Email: <i>haoyuw</i> [@] virginia [DOT] edu</p>
->>>>>>> Stashed changes
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Ph.D. student in the <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a> at <a href="https://www.virginia.edu">University of Virginia</a>, where I am advised by <a href="http://www.cs.virginia.edu/~hs6ms/">Prof. Helen Shen</a>. My research interests are in Datacenter Network, Distributed System and Cloud Computing.</p>
+<p>I am a postdoc associate in the <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a> at <a href="https://www.virginia.edu">University of Virginia</a>, where I am advised by <a href="http://www.cs.virginia.edu/~hs6ms/">Prof. Helen Shen</a>. My research interests are in Datacenter Network, Distributed System and Cloud Computing.</p>
 <p>I received my B.S. at <a href="https://en.wikipedia.org/wiki/University_of_Science_and_Technology_of_China">University of Science &amp; Technology of China (USTC)</a> and M.S. at <a href="http://www.columbia.edu/">Columbia University</a>. I am very fortunate to work with a number of wonderful people. </p>
 <h3>Research</h3>
 <p>My research interests include Cloud Computing, Datacenter Network, Distributed System, Machine Learning, and Renewable Energy</p>
