--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 <div id="toptitle">
 <h1>Haoyu Wang</h1>
 </div>
-<table class="imgtable"><tr><td>
-<img src="photo.jpg" alt="alt text" width="160px" height="160px" />&nbsp;</td>
-<td align="left"><p>Postdoc associate<br /> <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, <br /><a href="https://www.virginia.edu">University of Virginia (UVA)</a><br />
-Rice Hall 220 <br />
+<div class="infoblock">
+<div class="blockcontent">
+<p>Postdoc associate<br /> <a href="https://cpsc.yale.edu">Department of Computer Science</a>, <br /><a href="https://www.yale.edu">Yale University</a><br />
+51 Prospect Street <br />
 New Haven, CT, USA <br /> 
 Email: <i>h.wang</i> [@] cs [DOT] yale [DOT]edu</p>
-</td></tr></table>
+</div></div>
 <h2>About me</h2>
-<p>I am a postdoc associate in the <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a> at <a href="https://www.virginia.edu">University of Virginia</a>, where I am advised by <a href="http://www.cs.virginia.edu/~hs6ms/">Prof. Helen Shen</a>. My research interests are in Datacenter Network, Distributed System and Cloud Computing.</p>
-<p>I received my B.S. at <a href="https://en.wikipedia.org/wiki/University_of_Science_and_Technology_of_China">University of Science &amp; Technology of China (USTC)</a> and M.S. at <a href="http://www.columbia.edu/">Columbia University</a>. I am very fortunate to work with a number of wonderful people. </p>
+<p>I am a postdoc associate in the <a href="https://cpsc.yale.edu">Department of Computer Science</a> at <a href="https://www.yale.edu">Yale University</a>, where I work with <a href="https://www.cs.yale.edu/homes/soule/">Prof. Robert Soule</a> and <a href="https://codex.cs.yale.edu/avi/">Prof. Avi Silberschatz</a>.</p>
+<p>I received my PhD at <a href="https://www.virginia.edu">University of Virginia</a> and advised by <a href="http://www.cs.virginia.edu/~hs6ms/">Prof. Helen Shen</a>. Also I received my B.S. at <a href="https://en.wikipedia.org/wiki/University_of_Science_and_Technology_of_China">University of Science &amp; Technology of China (USTC)</a> and M.S. at <a href="http://www.columbia.edu/">Columbia University</a>. I am very fortunate to work with a number of wonderful people. </p>
 <h3>Research</h3>
-<p>My research interests include Cloud Computing, Datacenter Network, Distributed System, Machine Learning, and Renewable Energy</p>
+<p>My research interests include Cloud Computing, Datacenter Network, Distributed System, Machine Learning, and Renewable Energy.</p>
 <h2>Selective Publications </h2>
 <ol>
 <li><p><b>Haoyu Wang</b>, H. Shen, Z. Li, S. Tian<br /> GeoCol: A Geo-distributed Cloud Storage System with Low Cost and Latency using Reinforcement Learning<br /> ICDCS&rsquo;2021: IEEE International Conference on Distributed Computing Systems</p>
