--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publication</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="misc.html">Misc.</a></div>
+<div class="menu-item"><a href="services.html">Services.</a></div>
 <div class="menu-category">Links</div>
 <div class="menu-item"><a href="https://www.yale.edu">Yale</a></div>
 <div class="menu-item"><a href="https://www.virginia.edu">UVA</a></div>
