--- a/publication.html
+++ b/publication.html
@@ -15,7 +15,7 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="publication.html" class="current">Publication</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="services.html">Services.</a></div>
+<div class="menu-item"><a href="services.html">Services</a></div>
 <div class="menu-category">Links</div>
 <div class="menu-item"><a href="https://www.yale.edu">Yale</a></div>
 <div class="menu-item"><a href="https://www.virginia.edu">UVA</a></div>
@@ -46,6 +46,10 @@ CoNEXT&rsquo;2020: International Conference on emerging Networking EXperiments a
 <li><p><b>Haoyu Wang</b>, H. Shen, C. Reiss, A. Jain, Y. Zhang<br /> 
 Improved Intermediate Data Management for MapReduce Frameworks<br /> 
 IPDPS&rsquo;2020: IEEE International Parallel and Distributed Processing Symposium</p>
+</li>
+<li><p>J. Gao, <b>Haoyu Wang</b>, H. Shen<br /> 
+Machine Learning Based Workload Prediction in Cloud Computing<br />
+ICCCN&rsquo;2020: International Conference on Computer Communications and Networks</p>
 </li>
 <li><p><b>Haoyu Wang</b>, H. Shen, Q. Liu, K. Zheng, J. Xu<br /> 
 A Reinforcement Learning Based System for Minimizing Cloud Storage Service Cost<br />
