--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="publication.html">Publication</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="services.html">Services.</a></div>
+<div class="menu-item"><a href="services.html">Services</a></div>
 <div class="menu-category">Links</div>
 <div class="menu-item"><a href="https://www.yale.edu">Yale</a></div>
 <div class="menu-item"><a href="https://www.virginia.edu">UVA</a></div>
@@ -35,10 +35,10 @@ Email: <i>h.wang</i> [@] cs [DOT] yale [DOT]edu</p>
 </div></div>
 <h2>About me</h2>
 <p>I am a postdoc associate in the <a href="https://cpsc.yale.edu">Department of Computer Science</a> at <a href="https://www.yale.edu">Yale University</a>, where I work with <a href="https://www.cs.yale.edu/homes/soule/">Prof. Robert Soule</a> and <a href="https://codex.cs.yale.edu/avi/">Prof. Avi Silberschatz</a>.</p>
-<p>I received my PhD at <a href="https://www.virginia.edu">University of Virginia</a> and advised by <a href="http://www.cs.virginia.edu/~hs6ms/">Prof. Helen Shen</a>. Also I received my B.S. at <a href="https://en.wikipedia.org/wiki/University_of_Science_and_Technology_of_China">University of Science &amp; Technology of China (USTC)</a> and M.S. at <a href="http://www.columbia.edu/">Columbia University</a>. I am very fortunate to work with a number of wonderful people. </p>
+<p>I received my Ph.D. at <a href="https://www.virginia.edu">University of Virginia</a> and advised by <a href="http://www.cs.virginia.edu/~hs6ms/">Prof. Helen Shen</a>. Also, I received my B.S. at <a href="https://en.wikipedia.org/wiki/University_of_Science_and_Technology_of_China">University of Science &amp; Technology of China (USTC)</a> and M.S. at <a href="http://www.columbia.edu/">Columbia University</a>. I am very fortunate to work with a number of wonderful people. </p>
 <h3>Research</h3>
 <p>My research interests include Cloud Computing, Datacenter Network, Distributed System, Machine Learning, and Renewable Energy.</p>
-<h2>Selective Publications </h2>
+<h2>Selective Publications (<a href="https://scholar.google.com/citations?user=xBaIhq4AAAAJ&amp;hl=en">Google Scholar</a>)</h2>
 <ol>
 <li><p><b>Haoyu Wang</b>, H. Shen, Z. Li, S. Tian<br /> GeoCol: A Geo-distributed Cloud Storage System with Low Cost and Latency using Reinforcement Learning<br /> ICDCS&rsquo;2021: IEEE International Conference on Distributed Computing Systems</p>
 </li>
