--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@ Email: <i>h.wang</i> [@] cs [DOT] yale [DOT]edu</p>
 </td>
 </tr>
 </table>
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vo1ua0Kfn95wYqS7KAmFMx-WAvw4PVg-bbdJE6MkHP8&cl=ffffff&w=a"></script>
 </body>
 </html>
