--- a/index.html
+++ b/index.html
@@ -63,3 +63,7 @@ Email: <i>h.wang</i> [@] cs [DOT] yale [DOT]edu</p>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+  gtag('config', 'G-58MM4NKRP3');
+</script>
+</body>
+</html>
