--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <title>Haoyu Wang</title>
 </head>
 <body>
+
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
@@ -65,5 +66,6 @@ Email: <i>h.wang</i> [@] cs [DOT] yale [DOT]edu</p>
   gtag('js', new Date());
   gtag('config', 'G-58MM4NKRP3');
 </script>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&t=m&d=vo1ua0Kfn95wYqS7KAmFMx-WAvw4PVg-bbdJE6MkHP8'></script>
 </body>
 </html>
